--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "event-emitter",
+  "name": "@neyasbltb_88/event-emitter",
   "version": "1.0.0",
   "description": "",
   "type": "module",
-  "module": "./dist/index.js",
-  "types": "./dist/index.d.ts",
+  "module": "./dist",
+  "main": "./dist/index.js",
+  "types": "./dist",
   "scripts": {
     "build": "tsc"
   },
