--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
     "module": "./dist",
     "main": "./dist/index.js",
     "types": "./dist",
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/neyasbltb88/event-emitter.git"
+    },
     "scripts": {
         "build": "tsc",
         "format": "prettier . --write"
